--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theridel Coach    v. 0.0</title>
+    <title>Theridel Coach</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <h1>Theridel Coach</h1>
+        <h1>Theridel Coach    v. 0.0</h1>
         <p>Benvenuto nella piattaforma di coaching, accedi per gestire il tuo percorso.</p>
     </header>
 
