--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>Theridel Coach</h1>
+        <h1>Theridel Coach   ver. 0.2</h1>
         <p>Benvenuto nella piattaforma di coaching, accedi per gestire il tuo percorso.</p>
     </header>
 
